--- a/weibo/MainWindowController.xib
+++ b/weibo/MainWindowController.xib
@@ -197,7 +197,7 @@
 								<object class="NSScroller" id="889972941">
 									<reference key="NSNextResponder" ref="483467743"/>
 									<int key="NSvFlags">-2147483392</int>
-									<string key="NSFrame">{{1, 484}, {489, 16}}</string>
+									<string key="NSFrame">{{1, 555}, {489, 16}}</string>
 									<reference key="NSSuperview" ref="483467743"/>
 									<reference key="NSWindow"/>
 									<string key="NSReuseIdentifierKey">_NS:60</string>
@@ -873,6 +873,7 @@
 				<string key="267.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="268.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="269.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="5.CustomClassName">EQSTRScrollView</string>
 				<boolean value="NO" key="5.IBNSViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -889,19 +890,30 @@
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
+					<string key="className">EQSTRScrollView</string>
+					<string key="superclassName">NSScrollView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/EQSTRScrollView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
 					<string key="className">MainWindowController</string>
 					<string key="superclassName">NSWindowController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">timelineTable</string>
-						<string key="NS.object.0">NSTableView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">timelineTable</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="cellView">WBMessageTableCellView</string>
+						<string key="timelineTable">NSTableView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="cellView">
+							<string key="name">cellView</string>
+							<string key="candidateClassName">WBMessageTableCellView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="timelineTable">
 							<string key="name">timelineTable</string>
 							<string key="candidateClassName">NSTableView</string>
 						</object>
-					</object>
+					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/MainWindowController.h</string>
@@ -917,15 +929,15 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">WBMessageTableCellView</string>
-					<string key="superclassName">NSTableCellView</string>
+					<string key="superclassName">NSView</string>
 					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">authName</string>
+						<string key="NS.key.0">label</string>
 						<string key="NS.object.0">NSTextField</string>
 					</object>
 					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">authName</string>
+						<string key="NS.key.0">label</string>
 						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">authName</string>
+							<string key="name">label</string>
 							<string key="candidateClassName">NSTextField</string>
 						</object>
 					</object>
