--- a/weibo/MainWindowController.xib
+++ b/weibo/MainWindowController.xib
@@ -474,9 +474,9 @@
 												<object class="NSTextView" id="197258637">
 													<reference key="NSNextResponder" ref="478335357"/>
 													<int key="NSvFlags">2322</int>
-													<string key="NSFrameSize">{374, 81}</string>
+													<string key="NSFrameSize">{380, 81}</string>
 													<reference key="NSSuperview" ref="478335357"/>
-													<reference key="NSNextKeyView" ref="347515242"/>
+													<reference key="NSNextKeyView" ref="205124676"/>
 													<string key="NSReuseIdentifierKey">_NS:13</string>
 													<object class="NSTextContainer" key="NSTextContainer" id="640022025">
 														<object class="NSLayoutManager" key="NSLayoutManager">
@@ -503,11 +503,11 @@
 															<nil key="NSDelegate"/>
 														</object>
 														<reference key="NSTextView" ref="197258637"/>
-														<double key="NSWidth">374</double>
+														<double key="NSWidth">380</double>
 														<int key="NSTCFlags">1</int>
 													</object>
 													<object class="NSTextViewSharedData" key="NSSharedData">
-														<int key="NSFlags">272645</int>
+														<int key="NSFlags">67381505</int>
 														<int key="NSTextCheckingTypes">0</int>
 														<nil key="NSMarkedAttributes"/>
 														<reference key="NSBackgroundColor" ref="13583611"/>
@@ -546,7 +546,7 @@
 													<nil key="NSDelegate"/>
 												</object>
 											</array>
-											<string key="NSFrameSize">{374, 81}</string>
+											<string key="NSFrameSize">{380, 81}</string>
 											<reference key="NSSuperview" ref="986143190"/>
 											<reference key="NSNextKeyView" ref="197258637"/>
 											<string key="NSReuseIdentifierKey">_NS:11</string>
@@ -712,7 +712,7 @@ wGw</bytes>
 											<int key="NSvFlags">-2147483392</int>
 											<string key="NSFrame">{{-100, -100}, {16, 79}}</string>
 											<reference key="NSSuperview" ref="986143190"/>
-											<reference key="NSNextKeyView" ref="205124676"/>
+											<reference key="NSNextKeyView" ref="347515242"/>
 											<string key="NSReuseIdentifierKey">_NS:83</string>
 											<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 											<reference key="NSTarget" ref="986143190"/>
@@ -735,9 +735,9 @@ wGw</bytes>
 											<double key="NSPercent">0.94565218687057495</double>
 										</object>
 									</array>
-									<string key="NSFrame">{{63, 6}, {374, 81}}</string>
+									<string key="NSFrame">{{57, 6}, {380, 81}}</string>
 									<reference key="NSSuperview" ref="696948163"/>
-									<reference key="NSNextKeyView" ref="478335357"/>
+									<reference key="NSNextKeyView" ref="296748781"/>
 									<string key="NSReuseIdentifierKey">_NS:9</string>
 									<int key="NSsFlags">154112</int>
 									<reference key="NSVScroller" ref="296748781"/>
@@ -1060,54 +1060,6 @@ wGw</bytes>
 								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="1018439317">
-								<reference key="firstItem" ref="696948163"/>
-								<int key="firstAttribute">4</int>
-								<int key="relation">0</int>
-								<reference key="secondItem" ref="986143190"/>
-								<int key="secondAttribute">4</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">6</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="696948163"/>
-								<int key="scoringType">3</int>
-								<float key="scoringTypeFloat">9</float>
-								<int key="contentType">3</int>
-							</object>
-							<object class="IBNSLayoutConstraint" id="973268006">
-								<reference key="firstItem" ref="986143190"/>
-								<int key="firstAttribute">5</int>
-								<int key="relation">0</int>
-								<reference key="secondItem" ref="92976"/>
-								<int key="secondAttribute">6</int>
-								<float key="multiplier">1</float>
-								<object class="IBNSLayoutSymbolicConstant" key="constant">
-									<double key="value">8</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="696948163"/>
-								<int key="scoringType">9</int>
-								<float key="scoringTypeFloat">40</float>
-								<int key="contentType">3</int>
-							</object>
-							<object class="IBNSLayoutConstraint" id="212457007">
-								<reference key="firstItem" ref="986143190"/>
-								<int key="firstAttribute">3</int>
-								<int key="relation">0</int>
-								<reference key="secondItem" ref="766297276"/>
-								<int key="secondAttribute">4</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">2</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="696948163"/>
-								<int key="scoringType">9</int>
-								<float key="scoringTypeFloat">40</float>
-								<int key="contentType">3</int>
-							</object>
 							<object class="IBNSLayoutConstraint" id="584187696">
 								<reference key="firstItem" ref="766297276"/>
 								<int key="firstAttribute">5</int>
@@ -1133,6 +1085,54 @@ wGw</bytes>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
 									<double key="value">3</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="696948163"/>
+								<int key="scoringType">9</int>
+								<float key="scoringTypeFloat">40</float>
+								<int key="contentType">3</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="1018439317">
+								<reference key="firstItem" ref="696948163"/>
+								<int key="firstAttribute">4</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="986143190"/>
+								<int key="secondAttribute">4</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">6</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="696948163"/>
+								<int key="scoringType">3</int>
+								<float key="scoringTypeFloat">9</float>
+								<int key="contentType">3</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="973268006">
+								<reference key="firstItem" ref="986143190"/>
+								<int key="firstAttribute">5</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="92976"/>
+								<int key="secondAttribute">6</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">2</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="696948163"/>
+								<int key="scoringType">9</int>
+								<float key="scoringTypeFloat">40</float>
+								<int key="contentType">3</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="212457007">
+								<reference key="firstItem" ref="986143190"/>
+								<int key="firstAttribute">3</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="766297276"/>
+								<int key="secondAttribute">4</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">2</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="696948163"/>
@@ -1536,14 +1536,14 @@ wGw</bytes>
 				</array>
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="238.CustomClassName">WBMessageTableCellView</string>
-				<array key="238.IBNSViewMetadataConstraints">
+				<array class="NSMutableArray" key="238.IBNSViewMetadataConstraints">
 					<reference ref="693681226"/>
 					<reference ref="268814609"/>
-					<reference ref="784100050"/>
-					<reference ref="584187696"/>
 					<reference ref="212457007"/>
 					<reference ref="973268006"/>
 					<reference ref="1018439317"/>
+					<reference ref="784100050"/>
+					<reference ref="584187696"/>
 					<reference ref="260486612"/>
 					<reference ref="776424064"/>
 					<reference ref="278040969"/>
@@ -1604,6 +1604,7 @@ wGw</bytes>
 				<string key="522.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="523.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="528.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="529.CustomClassName">WBMessageScrollView</string>
 				<array key="529.IBNSViewMetadataConstraints">
 					<reference ref="957703715"/>
 				</array>
@@ -1626,7 +1627,7 @@ wGw</bytes>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">554</int>
+			<int key="maxID">556</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1687,6 +1688,14 @@ wGw</bytes>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/NSRoundedImageView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">WBMessageScrollView</string>
+					<string key="superclassName">NSScrollView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/WBMessageScrollView.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
